Added, nsamples started to work on p1 latex

--- a/hw4.tex
+++ b/hw4.tex
@@ -15,8 +15,14 @@
 
 % Let the homework begin!
 \section*{Problem 1}
-
-
+First we obtained the X^2 value by using the
+\begin{verbatim}
+pchisq(9*4.8/4,df=9)
+\end{verbatim}
+This gave us a value that chisq value of 0.7103325. Then we used normal distribution to find $P( S^2 > 4.8 )$ . To calculate the value of S^2 we used
+\begin{align*}
+  S^2 &= \int_{1}^{n} \frac{1}{t^2} dt \\
+\end{align*}
 
 \section*{Problem 2}
 
